# finance-agent-from-scratch

./: .env.docker  .env.example  DOCKER.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: main.py  runner.py
api/.guardrails/: hub_registry.json
api/config/: company_mappings.py  settings.py
api/database/: connection.py  models.py
api/guardrails/: guardrails_service.py
api/ingestion/: create_collection.py
api/ingestion/models/: ingestion.py
api/ingestion/services/: ingestion_edgar.py  ingestion_yahoo.py
api/routers/: ingestion_edgar.py  ingestion_yahoo.py  search.py
api/services/: agent.py  search.py  ticker_extractor.py  ticker_queue.py
api/validators/: guardrails_service.py
ingestion/: ingestion_edgar.py  ingestion_yahoo.py
ingestion/utils/: edgar_client_extraction.py  simple_chunker.py  yahoo_client_extraction.py
